# Inventory-Management-System

./: .gitignore  LICENSE  README.md  hardware_inventory_10000.csv  inventory_core.py
backend/: main.py  requirements-dev.txt  requirements.txt  sample.csv  test_api.py  test_api_direct.py  test_core.py
core/: CMakeLists.txt  bst.cpp  bst.h  wrapper.cpp
frontend/: index.html  script.js  style.css
scripts/: build.sh  build_direct.sh  fetch_frontend_deps.sh  run.sh  run_backend.sh  toggle_so.sh
